# telegram-sticker-download-bot

./: Cargo.toml  LICENSE  README.md
src/: main.rs  zip_dir.rs
