[package]
name = "telegram-sticker-download-bot"
version = "0.1.0"
edition = "2021"
authors = ["p0p3yee <devp0p3yee@gmail.com>"]
license = "MIT"
description = "A simple telegram bot to download sticker set"
homepage = "https://github.com/p0p3yee/telegram-sticker-download-bot"
repository = "https://github.com/p0p3yee/telegram-sticker-download-bot"
readme = "README.md"
keywords = ["telegram", "telegram-bot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = { version = "0.10.1", features = ["macros", "auto-send"] }
tokio = { version = "1.21.1", features = ["rt-multi-thread", "macros", "fs"] }
walkdir = "2.3.2"
zip = "0.6.2"
